--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <meta property="og:type" content="article"/>
 	<meta property="og:title" content="Kapil Shamlani | Web Developer | India"/>
 	<meta property="og:description" content="Web Developer, India. I likes to focus on full stack development for all devices using web technologies (HTML, CSS, JavaScript, PHP, Python, SQL, Magento) to develop compelling website, intuitive yet minimalistic interfaces, and engaging designs."/>
-	<meta property="og:url" content="http://www.kapilshamlani.com"/>
-	<meta property="og:image" content="http://www.kapilshamlani.com/media/kapil-portfolio.png"/>
+	<meta property="og:url" content="https://kshamlani.github.io"/>
+	<meta property="og:image" content="https://kshamlani.github.io/media/kapil-portfolio.png"/>
 	<meta property="article:published_time" content="2017-04-16"/>
 	<meta property="og:site_name" content="Kapil Shamlani"/>
 	<meta name="msvalidate.01" content="9DB19C88162AA707D1F00657F6B1A4A8" />
