--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </head>
     
     <body>
-      <div id="loader"><div id="loading"></div></div>
+      <!-- <div id="loader"><div id="loading"></div></div> -->
         <header>
            <div class="center">
                <div class="logo-div"><a href="http://kapilshamlani.com">
