--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <script src="lib/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="lib/typed.min.js" type="text/javascript"></script>
         <script>
-        window.addEventListener("load", function() {
-            var loader = document.getElementById("loader");
-            $("html").css("overflow-y", "visible");
-            document.body.removeChild(loader);
-        });
+        // window.addEventListener("load", function() {
+        //     var loader = document.getElementById("loader");
+        //     $("html").css("overflow-y", "visible");
+        //     document.body.removeChild(loader);
+        // });
         </script>
         <script>
 
